--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: DragonsAndGems_development
+  username: app2
+  password: Fa1ry7a1l
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +60,8 @@ development:
 test:
   <<: *default
   database: DragonsAndGems_test
+  username: app2
+  password: Fa1ry7a1l
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
