--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -26,7 +26,7 @@ jobs:
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: whoami && bin/rails db:schema:load
+        run: bundle install && bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake
