--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v3
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: echo $PATH && bin/rails db:schema:load
+        run: export PATH=$PATH:/usr/local/rvm/bin:/usr/local/rvm/rubies/ruby-3.0.2/bin && bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake
