--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -5,22 +5,30 @@
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
 env:
-  RUBY_VERSION: 3.0.2
+  RUBY_VERSION: 2.4
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_DB: postgres
 
-name: "Ruby on Rails CI"
-on:
-  push:
-    branches: [ "main", "ci-test" ]
-  pull_request:
-    branches: [ "main" ]
+name: Rails tests
+on: [push,pull_request]
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    env:
-      RAILS_ENV: test
+  rubocop-test:
+    name: Rubocop
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - name: Install Rubocop
+        run: gem install rubocop
+      - name: Check code
+        run: rubocop
+  rspec-test:
+    name: RSpec
+    needs: rubocop-test
+    runs-on: ubuntu-18.04
     services:
       postgres:
         image: postgres:latest
@@ -30,26 +38,25 @@ jobs:
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      # Add or replace dependency steps here
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@0a29871fe2b0200a17a4497bae54fe5df0d973aa # v1.115.3
+      - uses: actions/checkout@v1
+      - uses: actions/setup-ruby@v1
         with:
-          bundler-cache: true
-      # Add or replace database setup steps here
+          ruby-version: ${{ env.RUBY_VERSION }}
       - name: Install postgres client
         run: sudo apt-get install libpq-dev
-      - name: Run postgres
-        run: sudo systemctl start postgresql
-      - name: Set up database schema
-        run: bin/rails db:schema:load
-      # Add or replace test runners here
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundler install
+      - name: Create database
+        run: |
+          bundler exec rails db:create RAILS_ENV=test
+          bundler exec rails db:migrate RAILS_ENV=test
       - name: Run tests
-        run: bin/rake
+        run: bundler exec rake
   deploy:
     runs-on: self-hosted
-    needs: test
+    needs: rspec-test
     steps:
       - name: Run
         run: scripts/deploy.sh
