--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Rubocop
         run: gem install rubocop
       - name: Check code
-        run: rubocop
+        run: cd app && rubocop
   rspec-test:
     name: RSpec
     needs: rubocop-test
