--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -6,9 +6,9 @@
 # run tests and linters.
 env:
   RUBY_VERSION: 3.0.2
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
-  POSTGRES_DB: postgres
+  POSTGRES_USER: app2
+  POSTGRES_PASSWORD: Fa1ry7a1l
+  POSTGRES_DB: DragonsAndGems_test
 
 name: Rails tests
 on: [push,pull_request]
