--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -17,7 +17,7 @@ jobs:
     name: RSpec
     runs-on: ubuntu-20.04
     env:  
-     DATABASE_URL: "postgres://app2:Fa1ry7a1l@46.8.19.64:5432/DragonsAndGems"
+     DATABASE_URL: "postgres://app2:Fa1ry7a1l@46.8.19.64:5432/DragonsAndGems_test"
     steps:
       - uses: actions/checkout@v1
       - uses: ruby/setup-ruby@v1
@@ -30,6 +30,7 @@ jobs:
           bundler install
       - name: Create database
         run: |
+          bin/rails db:create  RAILS_ENV=test
           bin/rails db:migrate RAILS_ENV=test
       - name: Run tests
         run: bundler exec rake
