--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-20.04
     env:  
      DATABASE_URL: "postgres://app2:Fa1ry7a1l@46.8.19.64:5432/DragonsAndGems_test"
+     LANGUAGE: "en_US.UTF-8"
+     LANG: "en_US.UTF-8"
+     LC_ALL: "en_US.UTF-8"
     steps:
       - uses: actions/checkout@v1
       - uses: ruby/setup-ruby@v1
@@ -30,8 +33,8 @@ jobs:
           bundler install
       - name: Create database
         run: |
-          bin/rails db:create  RAILS_ENV=test LC_CTYPE=UTF-8
-          bin/rails db:migrate RAILS_ENV=test LC_CTYPE=UTF-8
+          bin/rails db:create  RAILS_ENV=test LC_CTYPE="en_US.utf-8"
+          bin/rails db:migrate RAILS_ENV=test LC_CTYPE="en_US.utf-8"
       - name: Run tests
         run: bundler exec rake
   deploy:
