--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -33,8 +33,11 @@ jobs:
           bundler install
       - name: Create database
         run: |
-          bin/rails db:create  RAILS_ENV=test LC_CTYPE="en_US.utf-8"
-          bin/rails db:migrate RAILS_ENV=test LC_CTYPE="en_US.utf-8"
+          export LANGUAGE="en_US.UTF-8"
+          export LANG="en_US.UTF-8"
+          export LC_ALL="en_US.UTF-8"
+          bin/rails db:create  RAILS_ENV=test LC_CTYPE="en_US.UTF-8"
+          bin/rails db:migrate RAILS_ENV=test LC_CTYPE="en_US.UTF-8"
       - name: Run tests
         run: bundler exec rake
   deploy:
