--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -36,7 +36,7 @@ jobs:
           export LANGUAGE="en_US.UTF-8"
           export LANG="en_US.UTF-8"
           export LC_ALL="en_US.UTF-8"
-          localedef -v -c -i en_US -f UTF-8 en_US.UTF-8
+          sudo localedef -v -c -i en_US -f UTF-8 en_US.UTF-8
           bin/rails db:create  RAILS_ENV=test LC_CTYPE="en_US.UTF-8"
           bin/rails db:migrate RAILS_ENV=test LC_CTYPE="en_US.UTF-8"
       - name: Run tests
