--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@
 #
 default: &default
   adapter: postgresql
-  encoding: unicode
+  encoding: LATIN1
+  host: '542874.cloud4box.ru'
+  post: '5432'
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
