--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@
 #
 default: &default
   adapter: postgresql
-  encoding: LATIN1
+  encoding: unicode
+  lc_collate: 'en_US.utf8'
+  lc_ctype: 'en_US.utf8'
   host: '542874.cloud4box.ru'
   post: '5432'
   # For details on connection pooling, see Rails configuration guide
