--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -27,7 +27,7 @@ jobs:
           bin/rails db:create RAILS_ENV=test
           bin/rails db:migrate RAILS_ENV=test
       - name: Run tests
-        run: bundler exec rake
+        run: rake test
   deploy:
     runs-on: self-hosted
     needs: rspec-test
