--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,6 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run
         run: |
-          sudo docker stop server
+          sudo docker stop server || true
           sudo docker build -t ruby:server .
           sudo docker run -dt --rm --name server -p 80:3000 ruby:server
